# BIS_Scraper

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  scrape-Bis.ipynb  scrape_BIS.ipynb  tutorial_for_class.ipynb
bis_scraper/: __init__.py  config_loader.py  pdf_extractor.py  scraper.py
texts/: r250701c.txt  r250709f.txt  r250714a.txt  r250715b.txt  r250715c.txt  r250716a.txt  r250717b.txt  r250717e.txt  r250717f.txt  r250717h.txt  r250728d.txt  r250728e.txt  r250728f.txt  r250728g.txt  r250728h.txt  r250728i.txt  r250728j.txt  r250728k.txt  r250728l.txt
tutorial/: tutorial1.ipynb  tutorial2.ipynb
