[project]
name = "bis-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "jesusvillota",email = "jesus.villota@cemfi.edu.es"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.35.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
